--- a/blogs.html
+++ b/blogs.html
@@ -18,7 +18,7 @@
             <div class= "navDiv">
                 <ul class="navItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="gellary.html">Gellary</a>
+                    <li><a href="gallery.html">Gellary</a>
                         <ul class="dropdown">
                             <li>Patisapta</li>
                             <li>Kuli-Pitha</li>
@@ -34,5 +34,54 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="blog-section">
+            <div class="container">
+                <h1 class="title"><span>B</span>logs</h1>
+                <div class="blogs">
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                    <article class="blog">
+                        <h1>How healthy pitha for us</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur at aut debitis excepturi, quasi laboriosam. Exercitationem maxime unde velit cumque eligendi dicta dolore similique a quis aliquid quae quos rem ducimus perspiciatis rerum iure, nemo amet illum corrupti? Asperiores dolores omnis dicta expedita fuga molestias placeat. A nemo assumenda corrupti nulla quasi laborum velit maiores?</p>
+                        <button>See More</button>
+                    </article>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
