--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class= "navDiv">
                 <ul class="navItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="gellary.html">Gellary</a>
+                    <li><a href="gallery.html">Gallery</a>
                         <ul class="dropdown">
                             <li>Patisapta</li>
                             <li>Kuli-Pitha</li>
