--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
             <div class= "navDiv">
                 <ul class="navItems">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="gellary.html">Gellary</a>
+                    <li><a href="gallery.html">Gellary</a>
                         <ul class="dropdown">
                             <li>Patisapta</li>
                             <li>Kuli-Pitha</li>
@@ -34,5 +34,52 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section class="form-section">
+            <div class="container">
+                <h1 class="title">Filup Yor <span>Form</span></h1>
+                <form action="#">
+                    <label for="name"> Your Name: 
+                        <input id="name" type="text" placeholder="Your Name" required>
+                    </label> <br>
+                    <label for="email"> Your Email: 
+                        <input id="email" type="email" placeholder="Your email" required>
+                    </label> <br>
+                    <label for="phone"> Your Phone: 
+                        <input id="phone" type="text" placeholder="Your Phone Number" required>
+                    </label> <br><br><br>
+                    <fieldset>
+                        <legend>Pick One Pitha</legend>
+                        <label for="chitoi">
+                            <input type="radio" name="pitha" id="chitoi"> Chitoi Pitha
+                        </label><br>
+                        <label for="bhapa">
+                            <input type="radio" name="pitha" id="bhapa"> Bhapa Pitha
+                        </label><br>
+                        <label for="coconut">
+                            <input type="radio" name="pitha" id="coconut"> Narikel Pitha
+                        </label><br>
+                    </fieldset><br>
+                    <fieldset>
+                        <legend>Select One or More Bhorta</legend>
+                        <label for="Sorisa">
+                            <input type="checkbox" name="bhorta" id="Sorisa"> Sorisa bhorta.
+                        </label><br>
+                        <label for="Shutki">
+                            <input type="checkbox" name="bhorta" id="Shutki"> Shutki Bhorta.
+                        </label><br>
+                        <label for="Dal">
+                            <input type="checkbox" name="bhorta" id= "Dal"> Dal Bhorta.
+                        </label><br>
+                    </fieldset><br>
+                    <fieldset>
+                        <legend>Spacial Instruction</legend>
+                        <textarea name="instruction" id="instruction" cols="30" rows="5" placeholder="massage"></textarea>
+                    </fieldset>
+                </form>
+            </div>
+
+        </section>        
+    </main>
 </body>
 </html>
