--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
                         <input id="email" type="email" placeholder="Your email" required>
                     </label> <br>
                     <label for="phone"> Your Phone: 
-                        <input id="phone" type="text" placeholder="Your Phone Number" required>
+                        <input id="phone" type="number" placeholder="Your Phone Number" required>
                     </label> <br><br><br>
                     <fieldset>
                         <legend>Pick One Pitha</legend>
