--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
                 </div>
             </div>
         </section>
+        <section class="about-section">
+            <div class="container">
+                <h1 class="title">About <span>Us</span></h1>
+                <p class="about-p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi fuga enim ipsum soluta? Nihil quas repellat est, quam aut nemo amet mollitia perferendis iure dolorum repellendus nostrum fugit? Est aspernatur explicabo debitis odit ab error voluptate repudiandae, molestias vel beatae quaerat ut, nulla quisquam. Accusantium, facere aut repellendus hic, odit consectetur enim expedita molestiae minima et itaque labore earum iste atque placeat natus ducimus sed fugit voluptate saepe velit! Nemo!</p>
+
+                <h1 class="title">Our <span>Team</span></h1>
+                <div class="team-members">
+                    <div class="person">
+                        <img  class="person-img" src="Media/person-1.jpg" alt="">
+                        <h3>Rubin</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam quo ad. Natus, architecto maxime.</p>
+                    </div>
+                    <div class="person">
+                        <img  class="person-img" src="Media/person-2.jpg" alt="">
+                        <h3>Rubin</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam quo ad. Natus, architecto maxime.</p>
+                    </div>
+                    <div class="person">
+                        <img  class="person-img" src="Media/person-3.jpg" alt="">
+                        <h3>Rubin</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam quo ad. Natus, architecto maxime.</p>
+                    </div>
+                    <div class="person">
+                        <img  class="person-img" src="Media/person-4.jpg" alt="">
+                        <h3>Rubin</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam quo ad. Natus, architecto maxime.</p>
+                    </div>
+                    <div class="person">
+                        <img  class="person-img" src="Media/person-5.jpg" alt="">
+                        <h3>Rubin</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque quam quo ad. Natus, architecto maxime.</p>
+                    </div>
+                </div> 
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
@@ -72,6 +107,8 @@
                 </div>
             </div>
         </div>
+        <br><br><br><hr><br>
+        <p class="copyrigt" style="text-align:center; color:#3c8d88; font-weight: 700;">&copy; Copyright 1999-2023 by Refsnes Data. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
