--- a/about.html
+++ b/about.html
@@ -72,5 +72,34 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container">
+            <div class="footerContent">
+                <div class="contact">
+                    <h3>Contact Us :</h3>
+                    <p> <strong> Phone: </strong> +8801698546** </p>
+                    <p> <strong> Email: </strong> pithabazar@gmail.com </p>
+                    <p> <strong> Address : </strong> kollanput 25, dhaka </p>
+                </div>
+                <div class="recentPosts">
+                    <h3>Recent Posts :</h3>
+                    <ul>
+                        <li><a href="#">Bhapa Pitha from Nator</a></li>
+                        <li><a href="#">Kuli Pitha from Jinaida</a></li>
+                        <li><a href="#">New Prosess to make shondes pitha</a></li>
+                    </ul>
+                </div>
+                <div class="followUs">
+                    <h3>Follow Us</h3>
+                   <a href="https://www.facebook.com/foysal.gq?mibextid=ZbWKwL">FACEBOOK</a>
+                   <a href="https://www.facebook.com/foysal.gq?mibextid=ZbWKwL">INSTAGRAM</a>
+                   <a href="https://www.facebook.com/foysal.gq?mibextid=ZbWKwL">TWEETER</a>
+                </div>
+            </div>
+        </div>
+        <br><br><br><hr><br>
+        <p class="copyrigt" style="text-align:center; color:#3c8d88; font-weight: 700;">&copy; Copyright 1999-2023 by Refsnes Data. All Rights Reserved.</p>
+    </footer>
 </body>
+
 </html>
